add modal for image

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -251,10 +251,6 @@
         ],
         "IngredientsTitle": "",
         "Ingredients": [
-          "",
-          "",
-          "",
-          ""
         ],
         "usageInstructionsTitle": "",
         "usageInstructions": [
@@ -2492,15 +2488,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2525,15 +2521,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2558,15 +2554,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2591,15 +2587,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2624,15 +2620,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2657,15 +2653,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2690,15 +2686,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2723,15 +2719,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2756,15 +2752,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2789,15 +2785,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2822,15 +2818,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2855,15 +2851,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
@@ -2888,15 +2884,15 @@
         ],
         "poductSpecifications": [
           {
-            "title": "Net Weight",
+            "title": "الوزن الصافي",
             "desc": ""
           },
           {
-            "title": "Bags",
+            "title": "عدد الظروف",
             "desc": "24"
           },
           {
-            "title": "Type",
+            "title": "النوع",
             "desc": "عصير"
           }
         ]
