--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -204,8 +204,8 @@
         ],
         "poductSpecifications": [
            {
-              "title": "الوزن الصافي",
-              "desc": "200,250,500غ"
+              "title": "الأوزان الصافية المتاحة",
+              "desc": "25g, 50g, 125g, 150g, 200g, 250g, 500g"
           },
           {
               "title": "النوع",
@@ -229,13 +229,13 @@
         "usageInstructions": [
         ],
         "poductSpecifications": [
-           {
-              "title": "الوزن الصافي",
-              "desc": ""
+          {
+            "title": "الأوزان الصافية المتاحة",
+            "desc": "250g, 500g"
           },
           {
-              "title": "النوع",
-              "desc": "متة"
+            "title": "النوع",
+            "desc": "متة"
           }
         ]
       }
@@ -259,8 +259,8 @@
         ],
         "poductSpecifications": [
            {
-              "title": "الوزن الصافي",
-              "desc": ""
+              "title": "الأوزان الصافية المتاحة",
+              "desc": "250g"
           },
           {
               "title": "النوع",
@@ -271,52 +271,29 @@
     },
     "4": {
       "name": "أماندا",
-      "desc": "هذا نص عربي تجريبي يصف المنتج الرابع.",
+      "desc": "استمتع بالنكهة الفريدة مع أماندا، خلطة متة مميزة صممت لتلبي جميع الأذواق.",
             "details":{
         "descTitle": "الوصف",
         "desc" : [
-          "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
-          "كما أنه يُساعد على طرد السموم من الجسم، ويقوي جهاز المناعة، ويُخفف الصداع، ويُزيل الانتفاخ، ويُساعد على الهضم."
+          "يتم إنتاجها بموجب ترخيص رسمي من العلامة التجارية العالمية أماندا، لنضمن لك أعلى معايير الجودة والأصالة في كل عبوة.",
+          "تتوفر بأحجام متعددة لتناسب احتياجاتك، لتجلب لك روح التقليد الأصيل بنكهة عصرية. عِش تجربة المتة كما لم تعرفها من قبل!"
         ],
-        "IngredientsTitle": "المكونات",
+        "IngredientsTitle": "",
         "Ingredients": [
-          "ورد جوري",
-          "مليسة",
-          "نعنع فلفلي",
-          "متة",
-          "زهرة الربيع",
-          "بابونج",
-          "شاي أخضر"
+         
         ],
-        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructionsTitle": "",
         "usageInstructions": [
-          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
-          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
+          
         ],
         "poductSpecifications": [
            {
-              "title": "الوزن الصافي",
-              "desc": "- 44g"
-          },
-          {
-              "title": "عدد الظروف",
-              "desc": "20"
+              "title": "الأوزان الصافية المتاحة",
+              "desc": "250g, 500g"
           },
           {
               "title": "النوع",
-              "desc": "مشروب ساخن"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
+              "desc": "متة"
           }
         ]
       }
@@ -718,7 +695,7 @@
       }
     },
     "16": {
-      "name": "زهورات",
+      "name": "زهورات دمشقية",
       "desc": "مزيج متوازن من زهور وأعشاب جبلية عطرية تمنحك لحظات من الهدوء والدفء. ",
       "details":{
         "descTitle": "الوصف",
@@ -734,7 +711,7 @@
         ],
         "usageInstructionsTitle": "طريقة التحضير",
         "usageInstructions": [
-          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
+          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات دمشقية ) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
           "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
         ],
         "poductSpecifications": [
@@ -1259,52 +1236,29 @@
     },
     "31": {
       "name": "سابروسا",
-      "desc": "هذا نص عربي تجريبي يصف المنتج الثالث.",
+      "desc": "اكتشف سابروسا، خلطة متة فاخرة تجمع بين عراقة التقاليد وروح المذاق العصري. مصنوعة من أوراق مختارة بعناية لتمنحك نكهة متوازنة وسلسة تجعل كل رشفة لحظة من المتعة.",
             "details":{
         "descTitle": "الوصف",
         "desc" : [
-          "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
-          "كما أنه يُساعد على طرد السموم من الجسم، ويقوي جهاز المناعة، ويُخفف الصداع، ويُزيل الانتفاخ، ويُساعد على الهضم."
+          "صُممت خصيصًا لعشاق الجودة والأصالة، لتعكس إرث ثقافة المتة بلمسة حديثة.",
+          "متوفرة بأحجام متعددة لتلائم أسلوب حياتك، سابروسا ليست مجرد مشروب، بل تجربة تشاركية تجمع الأحبة معًا. عِش التقليد وتذوق التميز!"
         ],
-        "IngredientsTitle": "المكونات",
+        "IngredientsTitle": "",
         "Ingredients": [
-          "ورد جوري",
-          "مليسة",
-          "نعنع فلفلي",
-          "متة",
-          "زهرة الربيع",
-          "بابونج",
-          "شاي أخضر"
+         
         ],
-        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructionsTitle": "",
         "usageInstructions": [
-          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
-          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
+          
         ],
         "poductSpecifications": [
            {
-              "title": "الوزن الصافي",
-              "desc": "- 44g"
-          },
-          {
-              "title": "عدد الظروف",
-              "desc": "20"
+              "title": "الأوزان الصافية المتاحة",
+              "desc": "250g, 500g"
           },
           {
               "title": "النوع",
-              "desc": "مشروب ساخن"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
+              "desc": "متة"
           }
         ]
       }
@@ -2311,12 +2265,12 @@
       "name": "كاكاو بالحليب  ",
       "desc": "نكهة الطفولة مع مشروب الكاكاو بالحليب، مزيج لذيذ من الكاكاو الناعم والحليب الكريمي.مشروب مثالي في ليالي الشتاء أو لحظات الراحة، يمنحك شعورًا بالدفء والسكينة في كل رشفة.",
       "details":{
-        "descTitle": "الوصف",
+        "descTitle": "",
         "desc" : [
           "",
           ""
         ],
-        "IngredientsTitle": "الفوائد",
+        "IngredientsTitle": "",
         "Ingredients": [
           
         ],
@@ -2325,10 +2279,6 @@
           
         ],
         "poductSpecifications": [
-           {
-              "title": "الوزن الصافي",
-              "desc": ""
-          },
           {
               "title": "عدد الظروف",
               "desc": "10"
@@ -2957,7 +2907,7 @@
       }
     },
     "79": {
-      "name": "القهوة سريعة التحضير 2g ",
+      "name": "القهوة سريعة التحضير مع الهيل 2g ",
       "desc": "الطعم الأصيل للقهوة سريعة التحضير، لمحبي النكهة القوية .",
       "details":{
         "descTitle": "الوصف",
@@ -2986,7 +2936,7 @@
       }
     },
     "80": {
-      "name": "القهوة سريعة التحضير مع الهيل 2g ",
+      "name": "القهوة سريعة التحضير 2g ",
       "desc": "الطعم الأصيل للقهوة سريعة التحضير مع الهيل، لمحبي النكهة القوية .",
       "details":{
         "descTitle": "الوصف",
@@ -3293,6 +3243,227 @@
           }
         ]
       }
+    },
+    "90":{
+    "name": "قهوة كلاسيك مع هيل",
+      "desc": "قهوة صافية 100%، خالية من أي إضافات، محمّصة بعناية، ومختارة من أجود حبات البن من المزارع الأصيلة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل رشفة تأخذك في رحلة من العبق الطبيعي والنكهة المتوازنة تجربة نقية لعشاق الذوق الحقيقي.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "100% حبوب بن طبيعية بدون أي إضافات صناعية",
+          "محمّصة بتقنيات دقيقة للحفاظ على النكهة الأصلية",
+          "طعم غني، متوازن، ونقي من أول رشفة حتى آخر قطرة"
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          "",
+          ""
+        ],
+        "poductSpecifications": [
+          {
+            "title": "الوزن",
+            "desc": "100g, 200g, 500g"
+          },
+          {
+            "title": "النوع",
+            "desc": "قهوة"
+          }
+        ]
+      }
+    },
+    "91":{
+    "name": "قهوة اكسترا مع هيل",
+      "desc": "قهوة صافية 100%، خالية من أي إضافات، محمّصة بعناية، ومختارة من أجود حبات البن من المزارع الأصيلة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل رشفة تأخذك في رحلة من العبق الطبيعي والنكهة المتوازنة تجربة نقية لعشاق الذوق الحقيقي.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "100% حبوب بن طبيعية بدون أي إضافات صناعية",
+          "محمّصة بتقنيات دقيقة للحفاظ على النكهة الأصلية",
+          "طعم غني، متوازن، ونقي من أول رشفة حتى آخر قطرة"
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          "",
+          ""
+        ],
+        "poductSpecifications": [
+          {
+            "title": "الوزن",
+            "desc": "100g, 200g, 500g"
+          },
+          {
+            "title": "النوع",
+            "desc": "قهوة"
+          }
+        ]
+      }
+    },
+    "92":{
+    "name": "قهوة اكسترا بدون هيل",
+      "desc": "قهوة صافية 100%، خالية من أي إضافات، محمّصة بعناية، ومختارة من أجود حبات البن من المزارع الأصيلة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل رشفة تأخذك في رحلة من العبق الطبيعي والنكهة المتوازنة تجربة نقية لعشاق الذوق الحقيقي.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "100% حبوب بن طبيعية بدون أي إضافات صناعية",
+          "محمّصة بتقنيات دقيقة للحفاظ على النكهة الأصلية",
+          "طعم غني، متوازن، ونقي من أول رشفة حتى آخر قطرة"
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          "",
+          ""
+        ],
+        "poductSpecifications": [
+          {
+            "title": "الوزن",
+            "desc": "100g, 200g, 500g"
+          },
+          {
+            "title": "النوع",
+            "desc": "قهوة"
+          }
+        ]
+      }
+    },
+    "93":{
+    "name": "قهوة سبيشال مع هيل خلطة ذهبية",
+      "desc": "قهوة صافية 100%، خالية من أي إضافات، محمّصة بعناية، ومختارة من أجود حبات البن من المزارع الأصيلة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل رشفة تأخذك في رحلة من العبق الطبيعي والنكهة المتوازنة تجربة نقية لعشاق الذوق الحقيقي.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "100% حبوب بن طبيعية بدون أي إضافات صناعية",
+          "محمّصة بتقنيات دقيقة للحفاظ على النكهة الأصلية",
+          "طعم غني، متوازن، ونقي من أول رشفة حتى آخر قطرة"
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          "",
+          ""
+        ],
+        "poductSpecifications": [
+          {
+            "title": "الوزن",
+            "desc": "100g, 200g, 500g"
+          },
+          {
+            "title": "النوع",
+            "desc": "قهوة"
+          }
+        ]
+      }
+    },
+    "94":{
+    "name": "قهوة مع هيل خلطة فضية",
+      "desc": "قهوة صافية 100%، خالية من أي إضافات، محمّصة بعناية، ومختارة من أجود حبات البن من المزارع الأصيلة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل رشفة تأخذك في رحلة من العبق الطبيعي والنكهة المتوازنة تجربة نقية لعشاق الذوق الحقيقي.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "100% حبوب بن طبيعية بدون أي إضافات صناعية",
+          "محمّصة بتقنيات دقيقة للحفاظ على النكهة الأصلية",
+          "طعم غني، متوازن، ونقي من أول رشفة حتى آخر قطرة"
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          "",
+          ""
+        ],
+        "poductSpecifications": [
+          {
+            "title": "الوزن",
+            "desc": "100g, 200g, 500g"
+          },
+          {
+            "title": "النوع",
+            "desc": "قهوة"
+          }
+        ]
+      }
+    },
+    "95":{
+    "name": "أعشاب بالرمان",
+      "desc": "استمتع بالمذاق المنعش مع أعشاب بنكهة الرمان، المصنوع من أجود الأعشاب والممزوج بلمسة حلوة وحامضة من الرمان.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل ظرف شاي مغلف بشكل فردي للحفاظ على النكهة الغنية والرائحة الفريدة، مما يضمن لك كوبًا طازجًا في كل مرة. ",
+          "مثالي في أي وقت من اليوم لتجربة فاكهية مريحة ستعشقها."
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "غني بمضادات الأكسدة التي تعزز مناعة الجسم.",
+          "يدعم الهضم ويهدئ المعدة.",
+          "يساعد على الترطيب ويمنح طاقة طبيعية منعشة."
+        ],
+        "usageInstructionsTitle": "طريقة التحضير:",
+        "usageInstructions": [
+          "للحفاظ على كامل النكهة، ضع ظرف كامبو (الرمان) في كوب سعة 250 مل ثم اسكب الماء المغلي فوقه و اتركه لمدة 3 دقائق. ",
+          "إذا كنت ترغب بالحصول على نكهة أقوى، اترك الظرف لمدة 4 دقائق في الماء"
+        ],
+        "poductSpecifications": [
+          {
+              "title": "عدد الظروف",
+              "desc": "20"
+          },
+          {
+            "title": "النوع",
+            "desc": "أعشاب"
+          }
+        ]
+      }
+    },
+    "96": {
+      "name": "سحلب فاخر سريع التحضير",
+      "desc": "استمتع بمذاق السحلب الأصيل مع خليط السحلب الفاخر الذي يجمع بين النكهة التقليدية وسهولة التحضير العصرية. ",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "غني بالقوام الكريمي والنكهات المميزة مثل الفانيليا وجوز الهند، ليمنحك لمسة فاخرة في كل كوب. ",
+          "متوفر في ظروف عملية لتحضيره بسهولة في أي وقت وأي مكان. عِش الدفء وتذوق الأصالة!"
+        ],
+        "IngredientsTitle": "",
+        "Ingredients": [
+          
+        ],
+        "usageInstructionsTitle": "",
+        "usageInstructions": [
+          
+        ],
+        "poductSpecifications": [
+          {
+              "title": "عدد الظروف",
+              "desc": "10"
+          },
+          {
+              "title": "النوع",
+              "desc": "مشروبات ساخنة"
+          }
+        ]
+      }
     }
   },
   "event": {
@@ -3440,7 +3611,7 @@
         },
         {
           "id" : "5",
-          "name": "Cruz de Malta"
+          "name": "Taragui"
         },
         {
           "id" : "6",
